# tlyrics

./: Cargo.toml  README.md
examples/: by_id.rs  search.rs  sync.rs
src/: lib.rs
